# SELO-HostPilot

./: LICENSE  README.md
ollama-toolchat/: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  SUDO_SETUP.md  check_and_install_tools.sh  pyproject.toml  verify_tools.py
ollama-toolchat/src/toolchat/: __init__.py  config.py  main.py
ollama-toolchat/src/toolchat/agent/: memory_store.py  ollama_client.py  persistence.py  planner.py  prompt.py  query_classifier.py  tool_router.py
ollama-toolchat/src/toolchat/api/: routes_chat.py  routes_health.py  routes_settings.py
ollama-toolchat/src/toolchat/infra/: audit.py  logging.py  sandbox.py  security.py
ollama-toolchat/src/toolchat/tools/: base.py  directory_size.py  disk.py  duplicates.py  exiftool_helper.py  gpu.py  health.py  photos.py  registry.py
ollama-toolchat/src/toolchat/tools/cmd/: cmd_runner.py  command_tool.py  specs_file_search.py  specs_hw.py  specs_logs.py  specs_network.py  specs_perf.py  specs_power_tools.py  specs_process.py  specs_security.py  specs_storage.py  specs_system.py  specs_system_info.py
ollama-toolchat/tests/: test_agent_tool_router.py  test_audit.py  test_auto_response.py  test_cmd_runner.py  test_command_tools.py  test_exiftool.py  test_persistence.py  test_security_paths.py  test_tools_photos.py
ollama-toolchat/web/: app.js  index.html  settings.html  settings.js  streaming.js
